<?xml version="1.0"?>
<package format="2">
  <name>baro_demo</name>
  <version>1.0.0</version>
  <description>Demo of simulated barometric sensor</description>

  <url type="repository">https://github.com/ubi-agni/mujoco_ros_demos</url>
  <url type="bugtracker">https://github.com/ubi-agni/mujoco_ros_demos/issues</url>

  <maintainer email="dleins@techfak.uni-bielefeld.de">David P. Leins</maintainer>
  <author>David P. Leins</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>mujoco_ros</depend>
  <depend>mujoco_contact_surface_sensors</depend>
  <depend>mujoco_mocap</depend>
  <depend>mujoco_ros_sensors</depend>

</package>

