<?xml version="1.0"?>
<package format="2">
  <name>curved_sensor_demo</name>
  <version>1.0.0</version>
  <description>Package to perform demo measurements with a curved sensor</description>

  <url type="repository">https://github.com/ubi-agni/mujoco_ros_demos</url>
  <url type="bugtracker">https://github.com/ubi-agni/mujoco_ros_demos/issues</url>

  <maintainer email="dleins@techfak.uni-bielefeld.de">David Leins</maintainer>
  <author>David Leins</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>mujoco_ros</depend>
  <depend>mujoco_contact_surface_sensors</depend>
  <depend>mujoco_ros_mocap</depend>
  <depend>mujoco_ros_sensors</depend>

</package>

