<?xml version="1.0"?>
<package>
  <name>rrbot_control</name>
  <version>1.0.0</version>
  <description>The rrbot_control package</description>
  <maintainer email="dleins@techfak.uni-bielefeld.de">David P. Leins</maintainer>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>
  <author email="dleins@techfak.de">David P. Leins</author>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/ubi-agni/mujoco_ros_demos/issues</url>
  <url type="repository">https://github.com/ubi-agni/mujoco_ros_demos</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>


  <export>
  </export>

</package>
